# dbt-test-project

./: .env.example  README.md  dbt.md  docker-compose.yml  pyproject.toml
dbt_test/: dbt_project.yml  profiles.yml
dbt_test/models/staging/: src_eltool.yml
