[tool.poetry]
name = "dbt-tutoriales"
version = "0.1.0"
description = ""
authors = ["Paula Lima"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.3.0"
dbt-postgres = "^1.3.0"
pgcli = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
